// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree description if subline property is set 1`] = `
{
  "name": "Some label",
  "role": "link",
}
`;

exports[`accessibility should expose correct accessibility tree if accessibility properties are set 1`] = `
{
  "name": "Some more detailed label",
  "role": "link",
}
`;

exports[`accessibility should expose correct accessibility tree if label is hidden 1`] = `
{
  "name": "Some label",
  "role": "link",
}
`;

exports[`accessibility should expose correct initial accessibility tree properties 1`] = `
{
  "name": "Some label",
  "role": "link",
}
`;

exports[`accessibility should expose correct initial accessibility tree properties 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "name": "Some label",
                              "role": "StaticText",
                            },
                          ],
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "name": "Some label",
                  "role": "link",
                },
              ],
              "name": "",
              "role": "generic",
            },
          ],
          "name": "",
          "role": "generic",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "RootWebArea",
}
`;
